--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,6 @@ body {
     margin: 0;
     padding: 0;
 }
-
-/*для визначення оформлення нижнього краю хедера*/
 .container-header-div {
     border-bottom: 1px solid #e7e9fc;
     width: 1158px;
@@ -16,8 +14,9 @@ body {
     gap: 40px; /*для визначення відступів між пунктами меню*/
 }
 
-/*для розміщення навігації та контактів в одну лінію*/
-.header-class {display: flex;}
+.header-class {
+    display: flex;
+    bottom: 1px solid #e7e9fc;}
 
 .logo {
     color: var(--IRIS, #4D5AE5);
@@ -53,6 +52,7 @@ body {
     list-style-type: none;
     margin: 0;
     padding-left: 0;
+    display: flex;
 }
 .a .nav-link {
     font-weight: 500;
@@ -61,6 +61,7 @@ body {
     letter-spacing: 0.02em;
     color: #2e2f42;
     text-decoration: none;
+
 }
 
 .page-nav a.nav-link:hover {color: #404bbf;}
@@ -101,8 +102,12 @@ color: #434455;
 
 .section-effective {
     background-color: #2e2f42;
+    padding: 188px 0; /*для визначення відступів всередині секції*/
+    justify-content: center;
 }
 
+.section-container {
+}
 
 .h-effective {
 font-size: 56px;
@@ -112,6 +117,7 @@ letter-spacing: 0.02em;
 color: #ffffff;
 margin: 0;
 padding: 0;}
+
 .button {
 background-color: #4D5AE5;
 font-family: "Roboto", sans-serif;
@@ -120,7 +126,8 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.04em;
 color: #ffffff;
-cursor: pointer;}
+cursor: pointer;
+}
 .button:hover {background-color: #404BBF;}
 .button:focus {background-color: #404BBF;}
 
@@ -139,9 +146,8 @@ font-size: 16px;
 letter-spacing: 0.02em;
 color: #434455;
 margin: 0;
-padding: 0;}
-
-
+padding: 0;
+}
 
 .ourteam {
     background-color: #F4F4FD
@@ -241,7 +247,8 @@ margin: 0;}
 /*футер*/
 .footer {
     background-color: #2e2f42;
-    padding: 100px 0; /*для визначення відступів всередині секції*/
+    padding-top: 100px;
+    padding-bottom: 100px; /*для визначення відступів всередині секції*/
 }
 
 .logo-footer {
@@ -268,4 +275,9 @@ margin: 0;}
     margin: 0;
     padding: 0;
     max-width: 264px; /*для визначення максимально допустимої ширини тексту*/
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+    font-family: "Roboto";
+    text-align: left;
 }
