--- a/css/styles.css
+++ b/css/styles.css
@@ -232,6 +232,7 @@ body {
     margin: 0;
     padding: 0;
     margin-bottom: 8px; /*для визначення відступу між заголовком і параграфом*/
+    text-align: center;
 }
 
 .p-aboutus {
@@ -241,11 +242,13 @@ body {
     color: #434455;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 /*section 3*/
 .ourteam {
     background-color: #F4F4FD
+    padding: 120px 0;
 }
 
 .h-ourteam {
@@ -258,24 +261,40 @@ body {
     color: #2e2f42;
     margin: 0;
     padding: 0;
+    margin-bottom: 72px;
 }
 
-.ourteam {
-    background-color: #F4F4FD
-}
+
 
 .ul-ourteam {
     margin: 0;
-    padding-left: 0;
+    padding-left: 0; /*для визначення відступів між заголовком та параграфом*/
+    display: flex; /*для розміщення елементів списку по горизонталі в рядок*/
+    gap: 24px; /*для визначення розмірів відступів між елементами списку*/
 }
 
-.productdesigner {
+.li-productdesigner {
     background-color: #FFFFFF;
     list-style-type: none;
     margin: 0;
     padding-left: 0;
+    border-radius: 0px 0px 4px 4px; /*для визначення заокруглень внизу блока*/
+    width: calc((100% - 72px) / 4); /*для визначення ширини пункту списку*/
 }
 
+.image-container {
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 32px 0; /*для визначення відступів від краю контейнера*/
+
+}
+
+/*section 4*/
+.portfolio {
+    padding-top: 120px;
+    padding-bottom: 120px; /*для визначення відступів всередині секції*/
+}
 .hh-portfolio {
     font-family: "Roboto";
     font-weight: 700;
@@ -287,8 +306,23 @@ body {
     text-transform: capitalize;
     margin: 0;
     padding: 0;
+    margin-bottom: 72px;
 }
 
+.ul-portfolio {
+    display: flex; /*для розміщення елементів списку в рядок по горизонталі*/
+    flex-wrap: wrap; /*для переносу елементів списку на новий рядок якщо їм не вистачає місця в попередньому*/
+    column-gap: 24px; /*для визначення горизонтальних відступів між пунктами списку*/
+    row-gap: 48px;
+}
+
+.li-portfolio {
+    list-style-type: none;
+    padding-left: 0;
+    margin: 0;
+    padding: 0;
+    width: calc((100% - 48px) / 3);
+}
 .h-portfolio {
     font-weight: 500;
     font-size: 20px;
@@ -297,6 +331,7 @@ body {
     color: #2e2f42;
     margin: 0;
     padding: 0;
+    margin-bottom: 8px;
 }
 
 .p-portfolio {
@@ -310,14 +345,6 @@ body {
 
 
 
-.li-portfolio {
-    list-style-type: none;
-    padding-left: 0;
-    margin: 0;
-    padding: 0;
-}
-
- 
 .ul {list-style: none;
 padding-left: 0;
 margin: 0;}
@@ -327,16 +354,15 @@ padding-left: 0;
 margin: 0;}
 
 
-.image-container {
-    display: block;
-    width: 100%;
-    text-align: center;
-}
 
-.image-container img {
+
+.image-container {
     display: block;
     max-width: 100%;
     height: auto;
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 /*футер*/
