--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,7 @@ margin: 0;}
     /*для додавання посиланню блочних властивостей*/
     margin-bottom: 16px;
     /*для визначення відступу між посиланням та параграфом*/
+    display: inline-block;
 }
 
 .logo-studio-footer {
