--- a/css/styles.css
+++ b/css/styles.css
@@ -247,8 +247,8 @@ body {
 
 /*section 3*/
 .ourteam {
-    background-color: #F4F4FD
-    padding: 120px 0;
+    background-color: #F4F4FD;
+    padding: 120px 0 120px;
 }
 
 .h-ourteam {
