--- a/css/styles.css
+++ b/css/styles.css
@@ -362,7 +362,7 @@ margin: 0;}
     display: block;
     max-width: 100%;
     height: auto;
-    padding: 32px 16px;
+    padding: 32px 0;
     border: 1px solid #e7e9fc;
     border-top: none;
 }
