--- a/css/styles.css
+++ b/css/styles.css
@@ -315,7 +315,7 @@ body {
     display: flex; /*для розміщення елементів списку в рядок по горизонталі*/
     flex-wrap: wrap; /*для переносу елементів списку на новий рядок якщо їм не вистачає місця в попередньому*/
     column-gap: 24px; /*для визначення горизонтальних відступів між пунктами списку*/
-    row-gap: 48px;
+    row-gap: 48px; /*для визначення вертикальних відступів між елементами списку якщо вони переносяться на новий рядок*/
 }
 
 .li-portfolio {
@@ -323,7 +323,7 @@ body {
     padding-left: 0;
     margin: 0;
     padding: 0;
-    width: calc((100% - 48px) / 3);
+    width: calc((100% - 48px) / 3); /*для визначення ширини для елемента списку*/
 }
 .h-portfolio {
     font-weight: 500;
@@ -333,7 +333,7 @@ body {
     color: #2e2f42;
     margin: 0;
     padding: 0;
-    margin-bottom: 8px;
+    margin-bottom: 8px; /*для визначення відступу між заголовком та параграфом*/
 }
 
 .p-portfolio {
@@ -362,9 +362,9 @@ margin: 0;}
     display: block;
     max-width: 100%;
     height: auto;
-    padding: 32px 0;
-    border: 1px solid #e7e9fc;
-    border-top: none;
+    padding: 32px 16px; /*для визначення відступів від країв контейнера*/
+    border: 1px solid #e7e9fc; /*для визначення стилю обводки по периметру контейнера*/
+    border-top: none; /*для скидання стилів обводки для верхнього краю контейнера*/
 }
 
 /*футер*/
