--- a/css/styles.css
+++ b/css/styles.css
@@ -353,7 +353,8 @@ margin: 0;}
 
 .li-portfolio {list-style-type: none;
 padding-left: 0;
-margin: 0;}
+margin: 0;
+width: calc((100% - 48px) / 3);}
 
 
 
