--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ body {
     gap: 40px;
 }
 
-
+/*section 1*/
 .section-effective {
     background-color: #2e2f42;
     padding: 188px 0;
@@ -177,6 +177,9 @@ body {
     height: 56px;
     border-radius: 4px;
     /*для визначення заокруглень у кнопки*/
+    margin: 0 auto; /* Центрування горизонтально */
+    text-align: center; /* Вирівнювання тексту по центру */
+    line-height: 56px; /* Центрування вертикально */
 }
 
 .button:hover {
