--- a/css/styles.css
+++ b/css/styles.css
@@ -172,14 +172,19 @@ body {
     cursor: pointer;
     display: block;
     min-width: 169px;
+    height: 56px;
     border: none;
     /*для вимкнення стандартного оформлення кнопки*/
     height: 56px;
     border-radius: 4px;
     /*для визначення заокруглень у кнопки*/
-    margin: 0 auto; /* Центрування горизонтально */
-    text-align: center; /* Вирівнювання тексту по центру */
-    line-height: 56px; /* Центрування вертикально */
+    margin: 0 auto;
+            /* Центрування горизонтально */
+    text-align: center;
+            /* Вирівнювання тексту по центру */
+
+            /* Центрування вертикально */
+
 }
 
 .button:hover {
