--- a/css/styles.css
+++ b/css/styles.css
@@ -175,17 +175,12 @@ body {
     height: 56px;
     border: none;
     /*для вимкнення стандартного оформлення кнопки*/
-    height: 56px;
+
     border-radius: 4px;
     /*для визначення заокруглень у кнопки*/
     margin: 0 auto;
             /* Центрування горизонтально */
-    text-align: center;
-            /* Вирівнювання тексту по центру */
-
-            /* Центрування вертикально */
-
-}
+    text-align: center;}
 
 .button:hover {
     background-color: #404BBF;
@@ -294,7 +289,7 @@ body {
     border-radius: 0px 0px 4px 4px; /*для визначення заокруглень внизу блока*/
     width: calc((100% - 72px) / 4); /*для визначення ширини пункту списку*/
 }
-
+.img {display: block;}
 .image-container {
     display: block;
     width: 100%;
