--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
     color: #ffffff;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     max-width: 496px;
 }
