--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,16 @@ body {
     padding: 0;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
 .header-class {
     display: flex;
     border-bottom: 1px solid #e7e9fc;
@@ -205,15 +215,7 @@ body {
     margin: 0;
     padding: 0;
 }
-.visually-hidden {position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
-}
+
 
 .ul {
     list-style: none;
