--- a/css/styles.css
+++ b/css/styles.css
@@ -6,16 +6,6 @@ body {
     padding: 0;
 }
 
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
-}
 .header-class {
     display: flex;
     border-bottom: 1px solid #e7e9fc;
@@ -215,7 +205,17 @@ body {
     margin: 0;
     padding: 0;
 }
-
+.visually-hidden {position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+    position: absolute;
+}
 
 .ul {
     list-style: none;
