--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,6 @@ body {
 }
 
 
-
 .logo {
     color: var(--IRIS, #4D5AE5);
     font-family: "Raleway", sans-serif;
@@ -158,7 +157,8 @@ body {
     color: #ffffff;
     margin: 0;
     padding: 0;
-    max-width: 496px;
+    width: 496px;
+    height: 120px;
 }
 
 .button {
