--- a/css/styles.css
+++ b/css/styles.css
@@ -156,8 +156,10 @@ body {
     letter-spacing: 0.02em;
     color: #ffffff;
     margin: 0;
+    margin-left: auto;
+    margin-right: auto;
     padding: 0;
-    width: 496px;
+    max-width: 496px;
     height: 120px;
 }
 
@@ -291,7 +293,7 @@ body {
     width: calc((100% - 72px) / 4); /*для визначення ширини пункту списку*/
     gap: 32px;
 }
-.img {
+img {
     display: block;
 }
 .image-container {
@@ -364,7 +366,7 @@ body {
     display: block;
     max-width: 100%;
     height: auto;
-    padding: 32px 16px; /*для визначення відступів від країв контейнера*/
+    padding: 32px 0px; /*для визначення відступів від країв контейнера*/
     border: 1px solid #e7e9fc; /*для визначення стилю обводки по периметру контейнера*/
     border-top: none; /*для скидання стилів обводки для верхнього краю контейнера*/
 }
