--- a/css/styles.css
+++ b/css/styles.css
@@ -366,7 +366,7 @@ img {
     display: block;
     max-width: 100%;
     height: auto;
-    padding: 32px 0; /*для визначення відступів від країв контейнера*/
+    padding: 32px 16px; /*для визначення відступів від країв контейнера*/
     border: 1px solid #e7e9fc; /*для визначення стилю обводки по периметру контейнера*/
     border-top: none; /*для скидання стилів обводки для верхнього краю контейнера*/
 }
