--- a/css/styles.css
+++ b/css/styles.css
@@ -212,10 +212,11 @@ body {
         height: 1px;
         padding: 0;
         margin: -1px;
-        overflow: hidden;
-        clip: rect(0, 0, 0, 0);
-        white-space: nowrap;
         border: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
 }
 
 .ull {
