--- a/css/styles.css
+++ b/css/styles.css
@@ -303,7 +303,7 @@ img {
 .image-container {
     display: block;
     width: 100%;
-    padding: 32px 0; /*для визначення відступів від краю контейнера*/
+    padding: 32px 0 32px; /*для визначення відступів від краю контейнера*/
 
 }
 
