--- a/css/styles.css
+++ b/css/styles.css
@@ -303,7 +303,7 @@ img {
 .image-container {
     display: block;
     width: 100%;
-    padding: 32px 0 32px; /*для визначення відступів від краю контейнера*/
+    padding: 32px 0; /*для визначення відступів від краю контейнера*/
 
 }
 
@@ -373,7 +373,7 @@ img {
     display: block;
     max-width: 100%;
     height: auto;
-    padding: 32px 16px; /*для визначення відступів від країв контейнера*/
+    padding: 32px 0; /*для визначення відступів від країв контейнера*/
     border: 1px solid #e7e9fc; /*для визначення стилю обводки по периметру контейнера*/
     border-top: none; /*для скидання стилів обводки для верхнього краю контейнера*/
 }
