--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
     justify-content: center;
     align-items: center;
 }
+
 .container {
     margin: 0 auto;
     padding: 0 15px;
@@ -62,7 +63,8 @@ body {
     margin: 0;
     padding-left: 0;
     display: flex;
-    gap: 40px; /*для визначення відступів між пунктами меню*/
+    gap: 40px;
+    /*для визначення відступів між пунктами меню*/
 }
 
 .a .nav-link {
@@ -105,6 +107,7 @@ body {
     text-decoration: none;
     margin: 0;
     padding-left: 0;
+    display: block;
     padding: 24px 0;
 }
 
@@ -121,6 +124,7 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    text-decoration: none;
 }
 
 .kontakt:hover {
@@ -158,6 +162,7 @@ body {
     margin: 0;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 48px;
     padding: 0;
     max-width: 496px;
     height: 120px;
@@ -181,8 +186,9 @@ body {
     border-radius: 4px;
     /*для визначення заокруглень у кнопки*/
     margin: 0 auto;
-            /* Центрування горизонтально */
-    text-align: center;}
+    /* Центрування горизонтально */
+    text-align: center;
+}
 
 .button:hover {
     background-color: #404BBF;
@@ -195,7 +201,8 @@ body {
 /*section 2*/
 
 .section-about {
-    padding: 120px 0 120px; /*для визначення відступів всередині секції*/
+    padding: 120px 0 120px;
+    /*для визначення відступів всередині секції*/
 }
 
 .h-about {
@@ -208,15 +215,15 @@ body {
 
 .visually-hidden {
     position: absolute;
-        width: 1px;
-        height: 1px;
-        padding: 0;
-        margin: -1px;
-        border: 0;
-        white-space: nowrap;
-        clip-path: inset(100%);
-        clip: rect(0 0 0 0);
-        overflow: hidden;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    border: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .ull {
@@ -229,7 +236,8 @@ body {
 
 
 .li-about {
-    flex-basis: calc((100% - 3 * 24px) / 4); /*для визначення ширини пункту списку*/
+    flex-basis: calc((100% - 3 * 24px) / 4);
+    /*для визначення ширини пункту списку*/
 }
 
 
@@ -241,8 +249,10 @@ body {
     color: #2e2f42;
     margin: 0;
     padding: 0;
-    margin-bottom: 8px; /*для визначення відступу між заголовком і параграфом*/
+    
     text-align: center;
+    margin-bottom: 8px;
+    /*для визначення відступу між заголовком і параграфом*/
 }
 
 .p-aboutus {
@@ -262,7 +272,7 @@ body {
 }
 
 .h-ourteam {
-    font-family: "Roboto";
+
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
@@ -273,16 +283,19 @@ body {
     padding: 0;
     margin-bottom: 72px;
     font-weight: 700;
-    width: 162px;
-    height: 40px;
+
+
 }
 
 
 .ul-ourteam {
     margin: 0;
-    padding-left: 0; /*для визначення відступів між заголовком та параграфом*/
-    display: flex; /*для розміщення елементів списку по горизонталі в рядок*/
-    gap: 24px; /*для визначення розмірів відступів між елементами списку*/
+    padding-left: 0;
+    /*для визначення відступів між заголовком та параграфом*/
+    display: flex;
+    /*для розміщення елементів списку по горизонталі в рядок*/
+    gap: 24px;
+    /*для визначення розмірів відступів між елементами списку*/
 }
 
 .li-productdesigner {
@@ -290,25 +303,30 @@ body {
     list-style-type: none;
     margin: 0;
     padding-left: 0;
-    border-radius: 0px 0px 4px 4px; /*для визначення заокруглень внизу блока*/
-    width: calc((100% - 72px) / 4); /*для визначення ширини пункту списку*/
+    border-radius: 0px 0px 4px 4px;
+    /*для визначення заокруглень внизу блока*/
+    width: calc((100% - 72px) / 4);
+    /*для визначення ширини пункту списку*/
     gap: 32px;
 }
+
 img {
     display: block;
 }
+
 .image-container {
     display: block;
     width: 100%;
-    text-align: center;
-    padding: 32px 0; /*для визначення відступів від краю контейнера*/
+    padding: 32px 0;
+    /*для визначення відступів від краю контейнера*/
 
 }
 
 /*section 4*/
 .portfolio {
     padding-top: 120px;
-    padding-bottom: 120px; /*для визначення відступів всередині секції*/
+    padding-bottom: 120px;
+    /*для визначення відступів всередині секції*/
 }
 
 
@@ -327,10 +345,17 @@ img {
 }
 
 .ul-portfolio {
-    display: flex; /*для розміщення елементів списку в рядок по горизонталі*/
-    flex-wrap: wrap; /*для переносу елементів списку на новий рядок якщо їм не вистачає місця в попередньому*/
-    column-gap: 24px; /*для визначення горизонтальних відступів між пунктами списку*/
-    row-gap: 48px; /*для визначення вертикальних відступів між елементами списку якщо вони переносяться на новий рядок*/
+    display: flex;
+    /*для розміщення елементів списку в рядок по горизонталі*/
+    flex-wrap: wrap;
+    /*для переносу елементів списку на новий рядок якщо їм не вистачає місця в попередньому*/
+    column-gap: 24px;
+    /*для визначення горизонтальних відступів між пунктами списку*/
+    row-gap: 48px;
+    /*для визначення вертикальних відступів між елементами списку якщо вони переносяться на новий рядок*/
+    margin: 0;
+    padding: 0;
+
 }
 
 
@@ -338,7 +363,8 @@ img {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: calc((100% - 48px) / 3); /*для визначення ширини для елемента списку*/
+    width: calc((100% - 48px) / 3);
+    /*для визначення ширини для елемента списку*/
 }
 
 .h-portfolio {
@@ -349,7 +375,8 @@ img {
     color: #2e2f42;
     margin: 0;
     padding: 0;
-    margin-bottom: 8px; /*для визначення відступу між заголовком та параграфом*/
+    margin-bottom: 8px;
+    /*для визначення відступу між заголовком та параграфом*/
 }
 
 .p-portfolio {
@@ -364,13 +391,16 @@ img {
 
 
 
-.image-container {
+.img-container {
     display: block;
     max-width: 100%;
     height: auto;
-    padding: 32px 16px; /*для визначення відступів від країв контейнера*/
-    border: 1px solid #e7e9fc; /*для визначення стилю обводки по периметру контейнера*/
-    border-top: none; /*для скидання стилів обводки для верхнього краю контейнера*/
+    padding: 32px 16px;
+    /*для визначення відступів від країв контейнера*/
+    border: 1px solid #e7e9fc;
+    /*для визначення стилю обводки по периметру контейнера*/
+    border-top: none;
+    /*для скидання стилів обводки для верхнього краю контейнера*/
 }
 
 /*футер*/
