--- a/css/styles.css
+++ b/css/styles.css
@@ -249,14 +249,35 @@ body {
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin: 0;
-    padding: 0;
-    
-    text-align: center;
+    text-indent: 0%;
+
+
     margin-bottom: 8px;
     /*для визначення відступу між заголовком і параграфом*/
 }
 
 .p-aboutus {
+    line-height: 1.5;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    color: #434455;
+    margin: 0;
+    padding: 0;
+    text-indent: 0%;
+}
+
+.h-people {
+    font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        margin: 0;
+        text-align: center;
+        margin-bottom: 8px;
+}
+
+.p-people {
     line-height: 1.5;
     font-size: 16px;
     letter-spacing: 0.02em;
